[package]
name = "partymixrust"
description = "Shielded CSV liquidity pool / mixing service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
secp256k1.workspace = true
rand.workspace = true
hex.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "partymixrust"
path = "src/main.rs"

[dev-dependencies]
tracing-subscriber.workspace = true
uuid.workspace = true
